tests/architecture/fixtures/invalid/order-command-boundaries/order-inventory-writer.ts
export function invalidOrderInventoryWriter(store: { replacePositions(records: unknown[]): void }) {
  store.replacePositions([]);
}
